--- a/manager/templates/layout.html
+++ b/manager/templates/layout.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -33,11 +32,11 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/static/js/jquery-2.1.3.min.js"></script>
+    <script src="/static/vendor/jquery-2.1.3.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/static/js/handlebars-v2.0.0.js"></script>
-    <script src="/static/js/reconnecting-websocket.min.js"></script>
-    <script src="/static/js/term.js"></script>
+    <script src="/static/vendor/handlebars-v2.0.0.js"></script>
+    <script src="/static/vendor/reconnecting-websocket.min.js"></script>
+    <script src="/static/vendor/term.js"></script>
     <script>function getWebsocketHost() {
   if (location.protocol == 'https:') {
     return 'wss://'+location.host;
