--- a/manager/static/templates/account/apps.html
+++ b/manager/static/templates/account/apps.html
@@ -5,6 +5,37 @@
 		</div>
 		<br />
 
-    	<ng-include src="'static/templates/includes/apps_list.html'"></ng-include>
+    	<table class="table table-hover">
+		    <thead>
+		    <tr>
+		        <th>Name</th>
+		        <th></th>
+		        <th>Status</th>
+		        <th>Image</th>
+		        <th>Memory</th>
+		        <th></th>
+		        <th></th>
+		        <th></th>
+		        <th></th>
+		    </tr>
+		    </thead>
+		    <tbody>
+		        <tr ng-repeat="app in apps">
+		            <td><a href="/a/{{ account.name }}/apps/{{ app.id }}">{{app.name}}</a></td>
+		            <!--{% if not account %}<td><a href="{% url 'manager.views.account' app.account.name %}">{{app.account.name}}</a></td>{% endif %}-->
+		            <td>
+		                <span ng-if="app.up" class="glyphicon glyphicon-ok-sign" style="color:green"></span>
+		                <span ng-if="!app.up" class="glyphicon glyphicon-minus-sign" style="color:red"></span>
+		            </td>
+		            <td>{{app.status}}</td>
+		            <td>{{app.image}}</td>
+		            <td>{{app.memory}} M</td>
+		            <td><a href="/a/{{ account.name }}/apps/{{ app.id }}/logs" title="Show logs"><span class="glyphicon glyphicon glyphicon-list"></span></a></td>
+		            <td><a href="/a/{{ account.name }}/apps/{{ app.id }}/start" title="Start"><span class="glyphicon glyphicon-play"></span></a></td>
+		            <td><a href="/a/{{ account.name }}/apps/{{ app.id }}/stop" title="Stop"><span class="glyphicon glyphicon-stop"></span></a></a></td>
+		            <td><a href="/a/{{ account.name }}/apps/{{ app.id }}/redeploy" title="Redeploy"><span class="glyphicon glyphicon-repeat"></span></a></a></td>
+		        </tr>
+		    </tbody>
+		</table>
 	</div>
 </div>
