--- a/manager/static/templates/includes/apps_list.html
+++ b/manager/static/templates/includes/apps_list.html
@@ -2,7 +2,7 @@
     <thead>
     <tr>
         <th>Name</th>
-       <!-- {% if not account %}<th>Account</th>{% endif %}-->
+        <th>Account</th>
         <th></th>
         <th>Status</th>
         <th>Image</th>
@@ -15,19 +15,19 @@
     </thead>
     <tbody>
         <tr ng-repeat="app in apps">
-            <td><a href="/a/{{ app.account_name }}/apps/{{ app.id }}">{{app.name}}</a></td>
-            <!--{% if not account %}<td><a href="{% url 'manager.views.account' app.account.name %}">{{app.account.name}}</a></td>{% endif %}-->
+            <td><a href="/a/{{ app.account_name }}/apps/{{ app.app_id }}">{{app.app_name}}</a></td>
+            <td><a href="/a/{{ app.account_name}}">{{app.account_name}}</a></td>
             <td>
                 <span ng-if="app.up" class="glyphicon glyphicon-ok-sign" style="color:green"></span>
                 <span ng-if="!app.up" class="glyphicon glyphicon-minus-sign" style="color:red"></span>
             </td>
             <td>{{app.status}}</td>
-            <td>{{app.image}}</td>
+            <td>{{app.image_name}}</td>
             <td>{{app.memory}} M</td>
-            <td><a href="/a/{{ app.account_name }}/apps/{{ app.id }}/logs" title="Show logs"><span class="glyphicon glyphicon glyphicon-list"></span></a></td>
-            <td><a href="/a/{{ app.account_name }}/apps/{{ app.id }}/start" title="Start"><span class="glyphicon glyphicon-play"></span></a></td>
-            <td><a href="/a/{{ app.account_name }}/apps/{{ app.id }}/stop" title="Stop"><span class="glyphicon glyphicon-stop"></span></a></a></td>
-            <td><a href="/a/{{ app.account_name }}/apps/{{ app.id }}/redeploy" title="Redeploy"><span class="glyphicon glyphicon-repeat"></span></a></a></td>
+            <td><a href="/a/{{ app.account_name }}/apps/{{ app.app_id }}/logs" title="Show logs"><span class="glyphicon glyphicon glyphicon-list"></span></a></td>
+            <td><a href="" ng-click="start(app)" title="Start"><span class="glyphicon glyphicon-play"></span></a></td>
+            <td><a href="" ng-click="stop(app)" title="Stop"><span class="glyphicon glyphicon-stop"></span></a></a></td>
+            <td><a href="" ng-click="redeploy(app)" title="Redeploy"><span class="glyphicon glyphicon-repeat"></span></a></a></td>
         </tr>
     </tbody>
 </table>
