--- a/proxy/templates/index.tmpl
+++ b/proxy/templates/index.tmpl
@@ -10,6 +10,8 @@
 
     <title>Manager</title>
 
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,300italic,400italic,600,600italic,200italic,200' rel='stylesheet' type='text/css'>
+
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
   </head>
