--- a/static/templates/account/layout.html
+++ b/static/templates/account/layout.html
@@ -1,42 +1,21 @@
-<div class="jumbotron account-menu">
-    <div class="container">
+<div class="container-v2">
+    <div class="rightsidemenu">
         <h1>{{account.name}}</h1>
-        <div>
-            <div>{{account.description}}</div>
+        <div class="description">{{account_description}}</div>
+
+        <div class="list-group">
+            <a href="/a/{{ account.name }}" class="list-group-item" ng-class="{active: action=='overview'}" force-reload>Overview</a>
+            <a href="/a/{{ account.name }}/apps" class="list-group-item" ng-show="account.access.app_access == true" ng-class="{active: action=='apps'}" force-reload>Apps</a>
+            <a href="/a/{{ account.name }}/domains" class="list-group-item" ng-show="account.access.domain_access == true" ng-class="{active: action=='domains'}" force-reload>Domains</a>
+            <a href="/a/{{ account.name }}/databases" class="list-group-item" ng-show="account.access.database_access == true" ng-class="{active: action=='databases'}" force-reload>Databases</a>
+            <a href="/a/{{ account.name }}/cronjobs" class="list-group-item" ng-show="account.access.cronjob_access == true" ng-class="{active: action=='cronjobs'}" force-reload>Cronjobs</a>
         </div>
     </div>
-</div>
 
-<div class="container">
-    <div class="row row-offcanvas row-offcanvas-right">
-
-        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
-            <div class="list-group">
-                <a href="/a/{{ account.name }}" class="list-group-item" ng-class="{active: action=='overview'}" force-reload>Overview</a>
-                <a href="/a/{{ account.name }}/apps" class="list-group-item" ng-show="account.access.app_access == true" ng-class="{active: action=='apps'}" force-reload>Apps</a>
-                <a href="/a/{{ account.name }}/domains" class="list-group-item" ng-show="account.access.domain_access == true" ng-class="{active: action=='domains'}" force-reload>Domains</a>
-                <a href="/a/{{ account.name }}/databases" class="list-group-item" ng-show="account.access.database_access == true" ng-class="{active: action=='databases'}" force-reload>Databases</a>
-                <a href="/a/{{ account.name }}/cronjobs" class="list-group-item" ng-show="account.access.cronjob_access == true" ng-class="{active: action=='cronjobs'}" force-reload>Cronjobs</a>
-            </div>
-        </div>
-        <!--/.sidebar-offcanvas-->
-
-        <div class="col-xs-12 col-sm-9">
-
-
-             <div data-block="content">
-            </div>
-
-            <footer>
-            </footer>
-
-
-
-
-        </div>
-        <!--/.col-xs-12.col-sm-9-->
+<div class="content">
+     <div data-block="content">
     </div>
-
+    </div>
 </div>
 <!--/row-->
 </div>
