--- a/static/templates/accounts.html
+++ b/static/templates/accounts.html
@@ -1,18 +1,11 @@
 <div class="container">
     <h2>Accounts</h2>
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="account in accounts">
-                <td><a href="/a/{{account.name}}">{{account.name}}</a>
-                </td>
-                <td>{{account.description}}</td>
-            </tr>
-        </tbody>
-    </table>
+    
+    <ul class="list-v2">
+        <li ng-repeat="account in accounts">
+            <a href="/a/{{account.name}}">
+            <div class="title">{{account.name}}</div>
+            <div class="description">{{account.description}}</div>
+        </li>
+    </ul>
 </div>
