--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -186,6 +186,8 @@ a.btn {
 
 .list-v2 {
     @extend .clearfix;
+    margin: 0px -10px;
+    padding: 0px 0px;
 }
 
 .list-v2 li {
@@ -198,7 +200,7 @@ a.btn {
     display: block;
     text-decoration: none;
     margin: 10px;
-    min-width: 200px;
+    width: 250px;
     border: solid #bfbfbf 1px;
 }
 
