--- a/proxy/templates/index.tmpl
+++ b/proxy/templates/index.tmpl
@@ -22,11 +22,13 @@
     <div id="tasks" ng-controller="tasksCtrl">
         <ng-include src="'/static/templates/tasks.html'"></ng-include>
     </div>
+    <script src="/static/vendor/moment-with-locales.min.js"></script>
     <script src="/static/vendor/jquery-2.1.3.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     <script src="/static/vendor/angular.min.js"></script>
     <script src="/static/vendor/angular-route.min.js"></script>
     <script src="/static/vendor/angular-blocks.min.js"></script>
+    <script src="/static/vendor/angular-sanitize.js"></script>
     <script src="/static/vendor/handlebars-v2.0.0.js"></script>
     <script src="/static/vendor/jquery.iframe-auto-height.modified.js"></script>
     <script src="/static/vendor/jquery.browser.js"></script>
@@ -36,6 +38,7 @@
     <script src="/static/vendor/ui-ace.js"></script>
     <script src="/static/vendor/ui-bootstrap-0.13.2.min.js"></script>
     <script src="/static/vendor/ui-bootstrap-tpls-0.13.1.min.js"></script>
+    <script src="/static/vendor/angular-moment.min.js"></script>
     
     <script src="/static/js/javascript.js"></script>
     <script src="/static/js/app.js"></script>
