--- a/static/templates/sync/images.html
+++ b/static/templates/sync/images.html
@@ -3,7 +3,7 @@
        <h3 style="margin-top:0px">Sync images</h3>
 
        <ul>
-        <li style="margin: 20px 0px" ng-repeat="image in images">{{image}} <button ng-click="sync(image)">Sync</button></li>
+        <li style="margin: 20px 0px" ng-repeat="image in images">{{image}} <button ng-click="sync(image)">Sync</button> <button ng-click="force_sync(image)">Force sync (no-cache)</button></li>
        </ul>
 
        <br />
