reloading of web servers moved to Go, auto reload web servers after rebuilding an app

--- a/static/templates/account/domains.html
+++ b/static/templates/account/domains.html
@@ -1,6 +1,7 @@
 <div data-extend-template="/static/templates/account/layout.html">
    <div data-block="content">
 		<div style="text-align:right">
+			<a href="" ng-click="syncDomains()" class="btn btn-default btn" role="button">Sync domains</a>
 			<a href="/a/{{account.name}}/domains/add" class="btn btn-default btn" role="button">Add domain</a>
 		</div>
 		<br />
