replace term.js with xterm.js

--- a/proxy/templates/index.tmpl
+++ b/proxy/templates/index.tmpl
@@ -14,6 +14,7 @@
 
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
+    <link href="/static/vendor/xterm.css" rel="stylesheet">
   </head>
 
   <body ng-controller="mainCtrl">
@@ -33,7 +34,8 @@
     <script src="/static/vendor/jquery.iframe-auto-height.modified.js"></script>
     <script src="/static/vendor/jquery.browser.js"></script>
     <script src="/static/vendor/reconnecting-websocket.min.js"></script>
-    <script src="/static/vendor/term.js"></script>
+    <script src="/static/vendor/xterm.js"></script>
+    <script src="/static/vendor/xterm-attach.js"></script>
     <script src="/static/ace/ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="/static/vendor/ui-ace.js"></script>
     <script src="/static/vendor/ui-bootstrap-0.13.2.min.js"></script>
