--- a/static/css/style.css
+++ b/static/css/style.css
@@ -396,6 +396,23 @@ a.btn {
     top: 0;
     width: 50%;
     /* 6 columns */ } }
+#shell {
+  width: 750px;
+  height: 520px;
+  padding: 2px; }
+
+#shell.active {
+  background-color: #111; }
+
+#shell .terminal {
+  background-color: #111;
+  color: #fafafa;
+  padding: 2px;
+  font-size: 15px; }
+
+#shell .terminal:focus .terminal-cursor {
+  background-color: #fafafa; }
+
 .pace {
   width: 140px;
   height: 300px;
