users & auth handling moved to golang

--- a/static/templates/nav.html
+++ b/static/templates/nav.html
@@ -34,7 +34,7 @@
                 </ul>
             </li>
 
-<li><a href="/accounts/logout/">Logout</a></li>
+<li><a href="" ng-click="logout()">Logout</a></li>
 
                     </ul>
         </div><!-- /.nav-collapse -->
