--- a/static/templates/nav.html
+++ b/static/templates/nav.html
@@ -17,6 +17,8 @@
                 <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sync <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="" ng-click="syncWebServers()">Sync web servers</a></li>
+                    <li><a href="" ng-click="syncAccounts()">Sync accounts</a></li>
+                    <li class="divider"></li>
                     <li><a href="/pull/images">Pull images</a></li>
                     <li><a href="" ng-click="purgeOldLogs()">Purge old logs</a></li>
                 </ul>
